# GIP10000

./: Cargo.toml  Makefile.toml  README.md  TODO.md  flash-release.gdb  flash.gdb  flashr.gdb  openocd.cfg
.cargo/: config.toml
lib/stm32f0xx-hal-dma/: Cargo.toml
lib/stm32f0xx-hal-dma/src/: dma.rs  lib.rs
old/: Cargo.toml  build.rs  memory.x
old/src/: config.rs
old/src/configTemplate/: FreeRTOSConfig.h
old/src/output/: anodes_driver.rs  bus.rs  catodes_selector.rs  gip10000_ll_driver.rs  mod.rs  paralel_bus.rs  static_buf_reader.rs
old/src/support/: interrupt_controller_f401.rs  led.rs
old/src/threads/: data_input_server.rs  monitor.rs  usbd.rs
old/src/time_base/hw_master/: master_f401.rs
old/src/workmodes/: common.rs  mod.rs
src/: config.rs  main.rs
src/configTemplate/: FreeRTOSConfig.h
src/output/: anodes_driver.rs  bus.rs  catodes_selector.rs  framebuffer.rs  gip10000_ll_driver.rs  mod.rs  paralel_bus.rs  serial_bus.rs  spi_bus.rs  static_buf_reader.rs
src/support/: dma_cfg.rs  dma_spi.rs  dma_spi_f072.rs  freertos_hooks.rs  interrupt_controller_f072.rs  led.rs  logging.rs  mod.rs  spi_tx_dma_channel.rs  spi_tx_dma_channel_f072.rs
src/support/f072/: dma_spi_f072.rs  mod.rs  spi_tx_dma_channel_f072.rs
src/threads/: data_input_server.rs  mod.rs  usbd.rs
src/time_base/: master_counter.rs
src/time_base/hw_master/: mod.rs
src/workmodes/: high_performance_mode.rs
