[package]
authors = ["ololoshka2871"]
edition = "2018"
readme = "README.md"
name = "gip10000"
version = "0.0.1"
resolver = "2"

[dependencies]
num = { version = "0.4", default-features = false, features = ["alloc"] }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
static_assertions = "1.1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
vcell = "0.1.3"
bitflags = "1.0.4"

embedded-hal = { version = "0.2.4", features = ["unproven"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.7"

serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

strum = {version = "0.24.0", default-features = false, features = ["derive"] }

usb-device = "0.2.8"
stm32-usbd = "0.6.0"

# defmt
defmt = "0.2"
defmt-rtt = "0.2"
defmt-macros = "0.2"

panic-abort = "0.3"

stm32f4xx-hal = { version = "0.13.2", features = ["rt"] }

freertos-rust = { git = "https://github.com/lobaro/FreeRTOS-rust.git" }

[build-dependencies]
cc = "1.0.52"
freertos-cargo-build = "0.1.1"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
codegen-units = 1 # better optimizations
panic = "abort"
#lto = true
# Если не влезает
#opt-level = "z"

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = true

[features]
default = [
  "stm32f401",
  "defmt-debug",
  "monitor-heap",
]

monitor-heap = ["monitor"]
stm32f401 = ["stm32f4xx-hal/stm32f401"]
monitor = []

# defmt: do NOT modify these features
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
