[package]
authors = ["ololoshka2871"]
edition = "2018"
readme = "README.md"
name = "gip10000"
version = "0.2.0"
resolver = "2"

[dependencies]
#num = { version = "0.4", default-features = false, features = ["alloc"] }
#num-derive = "0.3"
#num-traits = { version = "0.2", default-features = false }
#static_assertions = "1.1.0"
#lazy_static = { version = "1.4", features = ["spin_no_std"] }
#vcell = "0.1.3"
#bitflags = "1.0.4"

embedded-hal = { version = "0.2.4", features = ["unproven"] }
embedded-dma = "0.2"
cortex-m = "0.7.3"
cortex-m-rt = "0.7"

#serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
#strum = { version = "0.24.0", default-features = false, features = ["derive"] }

usb-device = "0.2.8"
stm32-usbd = "0.6.0"
usbd-serial = { path = "lib/usbd-serial" }

panic-abort = "0.3"

stm32f0xx-hal = { version = "0.18.0", features = ["rt"], optional = true }

cortex-m-rtic = { version = "1.1" }
systick-monotonic = "1.0.1"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
codegen-units = 1 # better optimizations
panic = "abort"
#lto = true
# Если не влезает
opt-level = "z"

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = true

[features]
default = [
  "stm32f072",
]

stm32f072 = ["stm32f0xx-hal/stm32f072", "stm32f0xx-hal/stm32-usbd"]
