[package]
authors = ["ololoshka2871"]
edition = "2018"
readme = "README.md"
name = "gip10000"
version = "0.2.0"
resolver = "2"

[dependencies]
num = { version = "0.4", default-features = false }

embedded-hal = { version = "0.2.4", features = ["unproven"] }
embedded-dma = "0.1.2"
cortex-m = "0.7.3"
cortex-m-rt = "0.7"
panic-abort = "0.3"

usb-device = "0.2.8"
stm32-usbd = "0.6.0"
usbd-serial = "0.1.1"

stm32f0xx-hal = { version = "0.18.0", features = ["rt"], optional = true }
stm32f0xx-hal-dma = { path = "lib/stm32f0xx-hal-dma", features = ["rt"], optional = true }

cortex-m-rtic = { version = "1.1" }
systick-monotonic = "1.0.1"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
codegen-units = 1 # better optimizations
panic = "abort"
#lto = true
# Если не влезает
opt-level = "z"

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = true

[features]
default = [
  "stm32f072",
]

stm32f072 = ["stm32f0xx-hal/stm32f072", "stm32f0xx-hal/stm32-usbd", "stm32f0xx-hal-dma"]
